menu 2nd li UI spacing issue fixed

--- a/Workspace/Posh/Overrides/NsEcom/MenuTabletFix/Modules/Main/Sass/_menu-tablet-fix.scss
+++ b/Workspace/Posh/Overrides/NsEcom/MenuTabletFix/Modules/Main/Sass/_menu-tablet-fix.scss
@@ -69,5 +69,10 @@
         .header-menu-level3 {
             z-index: 2;
         }
+        .header-menu-level2{
+          a, .header-menu-level2-anchor{
+            padding-right: 0 !important;
+          }   
+        }
     }
 }
